--- a/5Weeks/05-02.html
+++ b/5Weeks/05-02.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="05-02.js" defer></script>
     <link rel="stylesheet" href="05-02.css">
-    <title>Document</title> 
+    <title>UP & DOWN</title>
 </head>
 <body>
     <div class="main">
-        <title>UP & DOWN</title>
+        <div class="title">UP & DOWN</div>
         <div class="input">
             <input type="text" id="my_info">
         </div>
-        <div>0에서 99의 숫자를 입력해 주세요.</div>
+        <div class="text">0에서 99의 숫자를 입력해 주세요</div>
         <div class="updown"></div>
         <div class="button">
             <button class="ans">Go</button>
