--- a/todo_list/todo.html
+++ b/todo_list/todo.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="reset.css"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Jua&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css"/>
     <link rel="stylesheet" href="todo.css">
     <script src="todo.js" defer></script>
@@ -13,15 +16,17 @@
 <body>
     <div class="todo-wrapper">
         <div class="todo-title">todos</div>
+        <div class="todo-search-box">
+            <input type="text" class="todo-search-input" placeholder="검색어를 입력해주세요.">
+        </div>
         <div class="todo-box">
-
             <div class="todo-input-box">
                 <button class="complete-all-btn">✔</button>
                 <input type="text" class="todo-input" placeholder="해야 할 일을 입력해주세요.">
             </div>
             
             <ul class="todo-list">
-                <li class="todo-item checked">
+                <!-- <li class="todo-item checked">
                     <div class="checkbox">✔</div>
                     <div class="todo">첫번째 할 일</div>
                     <button class="delBtn">x</button>
@@ -35,7 +40,7 @@
                     <div class="checkbox"></div>
                     <div class="todo">세번째 할 일</div>
                     <button class="delBtn">x</button>
-                </li>
+                </li> -->
             </ul>
             <div class="todo-bottom">
                 <div class="left-items">3 items left</div>
